--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -62,18 +62,19 @@
   display: flex;
   flex-direction: column;
   gap: var(--Scale-1000);
+  width: 100%;
+  box-sizing: border-box;
   padding-left: var(--page-gutter-inline);
   padding-right: var(--page-gutter-inline);
-  box-sizing: border-box;
 }
 
 .site-footer-outro {
   margin: 0;
   color: var(--Foundation-Black);
   font-family: var(--font-family-primary);
-  font-size: var(--Font-Body-Intro-text-size);
+  font-size: var(--Font-Body-Outro-text-size);
   font-weight: var(--font-weight-regular);
-  line-height: var(--Font-Body-Intro-line-height);
+  line-height: var(--Font-Body-Outro-line-height);
 }
 
 .site-footer-bar {
